# leetcode

./: .cargoignore  .gitignore  129_sumNumbers.py  173_BSTIterator.py  207_canFinish.py  210_findOrder.py  285_inorderSuccessor.py  Cargo.toml  L004_findMedianSortedArray_main.py  L004_findMedianSortedArrays.py  L005_longestPalindrome.py  L010_isMatch.py  L015_threeSum.py  L019_removeNthFromEnd.py  L025_reverseKGroup.py  L026_removeDuplicates.py  L032_longestValidParentheses.py  L033_search.py  L038_countAndSay.py  L044_isMatch.py  L045_jump.py  L054_spiralOrder.py  L055_canJump_forward_greedy.py  L056_merge.py  L067_addBinary.py  L088_merge.py  L098_isValidBST.py  L128_longestConsecutive.py  L133_cloneGraph.py  L139_wordBreak_dp.py  L139_wordBreak_recursion.py  L140_wordBreak.py  L150_evalRPN.py  L158_read.py  L161_isOneEditDistance.py  L161_isOneEditDistance_2dimDP.py  L162_findPeakElement.py  L200_numIslands_bfs_main.py  L208_Trie.py  L209_minSubArrayLen.py  (+46 more)
1 Two Sum/: main.rs
100 Same Tree/: isSameTree-BFS.py  isSameTree-recursion.py
102 Binary Tree Level Order Traversal/: levelOrder.py
105 Construct Binary Tree from Preorder and Inorder Traversal/: buildTree-recursion.py  buildTree.py
11 Container With Most Water/: maxArea.py  maxArea.rs
114 Flatten Binary Tree to Linked List/: flatten.py
116 Populating Next Right Pointers in Each Node/: connect_BFS.py
125 Valid Palindrome/: isPalindrome.py
134 Gas Station/: can_complete_circuit.rs
1346 Check If N and Its Double Exist/: checkIfExist.py
135 Candy/: candy.md  candy.py
14 Longest Common Prefix/: longest_common_prefix.rs
144 Binary Tree Preorder Traversal/: preorderTraversal_iteration.py  preorderTraversal_iteration_best.py
1455 Check If a Word Occurs As a Prefix of Any Word in a Sentence/: is_prefix_of_word.rs
151 Reverse Words in a String/: reverseWords.py
173 Binary Search Tree Iterator/: BSTIterator_iteration.py
1975 Maximum Matrix Sum/: maxMatrixSum.py
198 House Robber/: rob.py  rob.rs
209 Minimum Size Subarray Sum/: minSubArrayLen.rs
2097 Valid Arrangement of Pairs/: validArrangement_BFS.py  validArrangement_DFS.py  validArrangement_pairs-as-node.py
2109 Adding Spaces to a String/: addSpaces.py
2290 Minimum Obstacle Removal to Reach Corner/: minimumObstacles.py
2337 Move Pieces to Obtain a String/: main.py
238 Product of Array Except Self/: productExceptSelf.py  product_except_self.rs
2554 Maximum Number of Integers to Choose From a Range I/: main.py
2577 Minimum Time to Visit a Cell In a Grid/: minimumTime.py
28 Find Substring/: strStr.py
3 Longest Substring Without Repeating Characters/: 2-lengthOfLongestSubstring.py  lengthOfLongestSubstring.py  length_of_longest_substring.rs
30 Substring with Concatenation of All Words/: main.rs
3243 Shortest Distance After Road Addition Queries I/: shortestDistanceAfterQueries.py
3364 Minimum Positive Sum Subarray/: minimumSumSubarray.py
3365 Rearrange K Substrings to Form Target String/: isPossibleToRearrange.py
36 Valid Sudoku/: main.rs
380_Insert_Delete_GetRandom_O(1)/: ranset.py
42 Trapping Rain Water/: trap.md  trap.py  trap2.py
45 Jump Game II/: jump.py
49 Group Anagrams/: main.md
58 Length of Last Word/: length_of_last_word.rs
68 Text Justification/: fullJustify.py
70 Climbing Stairs/: climbStairs.py
76 Minimum Window Substring/: main.py
773 Sliding Puzzle/: slidingPuzzle-2.py  slidingPuzzle.py
909 Snakes and Ladders/: snakesAndLadders.py
94 Binary Tree Inorder Traversal/: inorderTraversal_iteration.py  inorderTraversal_recursion.py
95 Unique Binary Search Trees II/: generateTrees.py  generateTrees_old.py
L018_fourSum/: L018_fourSum.py
L051_search/: L051_search.py
L055_canJump/: L055_canJump.py
L057_insert/: L057_insert.py
L096_numTrees/: L096_numTrees.py
L146_LRUCache/: L146_LRUCache.py
L155_MinStack/: L155_MinStack.py
L157_read/: L157_read.py
L159_lengthOfLongestSubstringTwoDistinct/: L159_lengthOfLongestSubstringTwoDistinct.py
L190_reverseBits/: L190_reverseBits.py
L200_numIslands_dfs/: L200_numIslands_dfs.py
L207_canFinish/: L207_canFinish.py
L239_maxSlidingWindow/: L239_maxSlidingWindow.py
L240_searchMatrix/: L240_searchMatrix.py
L247_findStrobogrammatic/: L247_findStrobogrammatic.py
L252_canAttendMeetings/: L252_canAttendMeetings.py
L279_numSquares_main/: L279_numSquares_main.py
L286_wallsAndGates_main/: L286_wallsAndGates_main.py
L289_gameOfLife/: L289_gameOfLife.py
L356_isReflected/: L356_isReflected.py
L525_findMaxLength/: L525_findMaxLength.py
L718_findLength/: L718_findLength.py
L721_accountsMerge/: L721_accountsMerge.py
L796_rotateString/: L796_rotateString.py
L804_uniqueMorseRepresentations/: L804_uniqueMorseRepresentations.py
codeforces/1907D - Jumping Through Segments/: main.py
codeforces/1919C - Grouping Increases/: main.py
codeforces/1931E - Anna and the Valentine's Day Gift/: main.py
codeforces/TheForces Round #44/: a.py  a.txt  b.py  c.py  c.txt  d.py  e.py  e.txt
findMinHeightTrees/: findMinHeightTrees.py
isBipartite_main/: isBipartite_main.py
largestValues/: largestValues.py
load-cargo/: main.rs
problems/1004 Max Consecutive Ones III/: main.py
problems/1014 Best Sightseeing Pair/: main.py
problems/103 Binary Tree Zigzag Level Order Traversal/: main.py
problems/104 Maximum Depth of Binary Tree/: main_DFS_iteration.py
problems/106 Construct Binary Tree from Inorder and Postorder Traversal/: buildTree_inorder_postorder.py
problems/108 Convert Sorted Array to Binary Search Tree/: main.py
problems/112 Path Sum/: hasPathSum_recursion.py
problems/12 Integer to Roman/: intToRoman.py
(+339 files in other folders)
