[package]
name = "leetcode"
version = "0.1.0"

[dependencies]

[[bin]]
name = "1"
path = "1 Two Sum/main.rs"
test = false

[[bin]]
name = "30"
path = "30 Substring with Concatenation of All Words/main.rs"
test = false

[[bin]]
name = "36"
path = "36 Valid Sudoku/main.rs"
test = false

[[bin]]
name = "49"
path = "49 Group Anagrams/main.rs"
test = false

[[bin]]
name = "205"
path = "205 Isomorphic Strings/main.rs"
test = false

[[bin]]
name = "209"
path = "209 Minimum Size Subarray Sum/minSubArrayLen.rs"
test = false

[[bin]]
name = "383"
path = "383 Ransom Note/main.rs"
test = false

[[bin]]
name = "1455"
path = "1455 Check If a Word Occurs As a Prefix of Any Word in a Sentence/is_prefix_of_word.rs"
test = false

[[bin]]
test = false
name = "2825"
path = "2825 Make String a Subsequence Using Cyclic Increments/main.rs"